changed text size on visualization according to window size

--- a/app/views/visualizations/standalone.html.erb
+++ b/app/views/visualizations/standalone.html.erb
@@ -43,9 +43,16 @@
       margin-top: 0;
     }
 
+    text {
+      font-size: 13px;
+    }
+
     @media all and (max-width: 959px) and (min-width: 700px) {
     .title{
         font-size: 3vw;
+      }
+      text {
+        font-size: 13px;
       }
     }
 
@@ -53,11 +60,17 @@
     .title{
         font-size: 4vw;
       }
+      text {
+        font-size: 12px;
+      }
     }
 
     @media all and (max-width: 499px) and (min-width: 50px) {
     .title{
         font-size: 5vw;
+      }
+      text {
+        font-size: 11px;
       }
     }
 
