changed owner to author in visualization index

--- a/app/views/visualizations/index.html.erb
+++ b/app/views/visualizations/index.html.erb
@@ -14,7 +14,7 @@
               <tr>
                 <th>Title</th>
                 <th>Type</th>
-                <th>Owner</th>
+                <th>Author</th>
                 <th>Views</th>
                 <th></th>
               </tr>
