show edit button on visualizations index to owner

--- a/app/views/visualizations/index.html.erb
+++ b/app/views/visualizations/index.html.erb
@@ -29,6 +29,7 @@
                   <td><%= visualization.views_counter_cache %></td>
                   <td>
                     <%= link_to 'View', standalone_visualization_path(visualization), target: '_blank' %>
+                    <%= (link_to 'Edit', edit_visualization_path(visualization)) if visualization.user == current_user %>
                   </td>
                 </tr>
               <% end %>
