--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,15 +10,25 @@
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li><%= active_link_to 'Data', data_path, wrap_tag: :li %></li>
-        <li><%= active_link_to 'Visualizations', visualizations_path, wrap_tag: :li %></li>
+        <% if user_signed_in? %>
+          <li><%= active_link_to 'Data', data_path, wrap_tag: :li %></li>
+          <% if current_user.visualizations.present? %>
+            <li><%= active_link_to 'My Visualizations', my_visualizations_path,
+                      wrap_tag: :li, active: [['visualizations'], ['my', 'show', 'edit']] %></li>
+          <% end %>
+        <% end %>
+        <li><%= active_link_to 'All Visualizations', visualizations_path,
+                  wrap_tag: :li, active: :exact %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown open">
         </li>
         <li>
-          <% if user_signed_in? %><a class="navbar-email" href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><%= image_tag avatar_url(current_user), class: "navbar-avatar" %><%= current_user.email %>
-              <b class="caret"></b><div class="ripple-container"></div></a>
+          <% if user_signed_in? %>
+            <a class="navbar-email" href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><%= image_tag avatar_url(current_user), class: "navbar-avatar" %><%= current_user.email %>
+              <b class="caret"></b>
+              <div class="ripple-container"></div>
+            </a>
             <ul class="dropdown-menu">
               <li><%= link_to 'FAQ', faq_path %></li>
               <li><%= active_link_to 'Account', edit_user_registration_path, wrap_tag: :li %></li>
