--- a/app/views/visualizations/standalone.html.erb
+++ b/app/views/visualizations/standalone.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Insightful</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
+  <%= stylesheet_link_tag    'fonts.css' %>
   <%= stylesheet_link_tag    'mfb/mfb.min.css' %>
   <%= stylesheet_link_tag    'draw/include.css', media: 'all' %>
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
