can now filter visualizations by user or type

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
           <% end %>
         <% end %>
         <li><%= active_link_to 'All Visualizations', visualizations_path,
-                  wrap_tag: :li, active: :exact %></li>
+                  wrap_tag: :li, active: [['visualizations'], ['index']] %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown open">
