changed button styles for drawing pageS

--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -61,8 +61,8 @@
         </div>
       </div>
 
-      <a class="btn btn-primary" onclick="draw()">Draw</a>
-      <a id="saveButton" onclick="save()" class="btn btn-primary" style="display: none">Save</a>
+      <a class="btn btn-success btn-raised waves-effect" onclick="draw()">Draw</a>
+      <a id="saveButton" onclick="save()" class="btn btn-primary btn-raised waves-effect" style="display: none">Save</a>
 
     </div>
   </div>
