--- a/app/views/data/draw/stacked_bar.html.erb
+++ b/app/views/data/draw/stacked_bar.html.erb
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <button id="saveButton" onclick="save()" class="btn btn-primary" style="display: none">Save</button>
+      <button id="saveButton" onclick="save()" class="btn btn-primary btn-raised waves-effect" style="display: none">Save</button>
 
     </div>
   </div>
