--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -73,11 +73,11 @@
                   <td><%= visualization.views_counter_cache %></td>
                   <td><%= I18n.l visualization.updated_at.localtime, format: :long %></td>
                   <td>
-                    <%= link_to 'Share', '', onclick: 'share("'+standalone_visualization_url(visualization)+'")', data: { toggle: :modal, target: "#myModal" } %>&nbsp;
-                    <%= link_to 'Show', visualization %>&nbsp;
-                    <%= link_to 'Permalink', standalone_visualization_path(visualization), target: '_blank' %>&nbsp;
-                    <%= link_to 'Edit', edit_visualization_path(visualization) %>&nbsp;
-                    <%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %>
+                    <%= link_to 'Share', '', onclick: 'share("'+standalone_visualization_url(visualization)+'")', data: { toggle: :modal, target: "#myModal" }, class: 'btn btn-xs btn-primary' %>&nbsp;
+                    <%= link_to 'Show', visualization, class: 'btn btn-xs btn-primary' %>&nbsp;
+                    <%= link_to 'Preview', standalone_visualization_path(visualization), target: '_blank', class: 'btn btn-xs btn-primary' %>&nbsp;
+                    <%= link_to 'Edit', edit_visualization_path(visualization), class: 'btn btn-xs' %>&nbsp;
+                    <%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' %>
                   </td>
                 </tr>
               <% end %>
