--- a/app/views/visualizations/index.html.erb
+++ b/app/views/visualizations/index.html.erb
@@ -35,7 +35,7 @@
             </tbody>
           </table>
 
-          <%#= paginate @visualizations %>
+          <%= paginate @visualizations %>
         </div>
 
       <% else %>
