--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -4,7 +4,10 @@
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
-        <h1 id="forms"><%= @datum.name %>&nbsp;&nbsp;<%= link_to '<i class="material-icons">edit</i>'.html_safe, edit_datum_path(@datum) %></h1>
+        <h1 id="forms"><%= @datum.name %>
+          <%= link_to '<i class="material-icons">edit</i>'.html_safe, edit_datum_path(@datum) %>
+          <%= link_to '<i class="material-icons">file_download</i>'.html_safe, download_csv_datum_path(@datum) %>
+        </h1>
       </div>
     </div>
     <div class="col-md-12">
