--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <%= link_to 'Insightful', root_path, class: "navbar-brand topnav" %>
+                <%= link_to 'insightful', root_path, class: "navbar-brand topnav" %>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Insightful</h1>
+                        <h1>insightful</h1>
                         <h3>Because data is more than tables</h3>
                         <hr class="intro-divider">
                         <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-raised btn-success waves-effect' %>
@@ -161,12 +161,11 @@
                             <%= link_to 'Home', root_path %>
                         </li>
                         <li class="footer-menu-divider">⋅</li>
-                        <li class="footer-menu-divider">⋅</li>
                         <li>
                             <%= link_to 'FAQ', faq_path %>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Insightful 2016</p>
+                    <p class="copyright text-muted small">insightful 2016</p>
                 </div>
             </div>
         </div>
