change draw page title

--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -37,7 +37,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
-        <h1>Draw#sankey</h1>
+        <h1>Draw Sankey</h1>
       </div>
     </div>
     <div class="col-sm-12">
