--- a/app/views/data/draw/stacked_bar.html.erb
+++ b/app/views/data/draw/stacked_bar.html.erb
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
-        <h1>Draw#stacked_bar</h1>
+        <h1>Draw Stacked Bar</h1>
       </div>
     </div>
     <div class="col-sm-12">
