--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -43,7 +43,7 @@ path {
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
-        <h1>Draw#sunburst</h1>
+        <h1>Draw Sunburst</h1>
       </div>
     </div>
     <div class="col-sm-12">
