changed save to publish in draw pages

--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -62,7 +62,7 @@
       </div>
 
       <a class="btn btn-success btn-raised waves-effect" onclick="draw()">Draw</a>
-      <a id="saveButton" onclick="save()" class="btn btn-primary btn-raised waves-effect" style="display: none">Save</a>
+      <button id="saveButton" onclick="save()" class="btn btn-primary btn-raised waves-effect" style="display: none">Publish</button>
 
     </div>
   </div>
