--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -67,7 +67,7 @@ path {
         </div>
       </div>
 
-      <button id="saveButton" onclick="save()" class="btn btn-primary btn-raised waves-effect" style="display: none">Save</button>
+      <button id="saveButton" onclick="save()" class="btn btn-primary btn-raised waves-effect" style="display: none">Publish</button>
       
     </div>
   </div>
