--- a/app/views/visualizations/my.html.erb
+++ b/app/views/visualizations/my.html.erb
@@ -26,6 +26,7 @@
                   <td><%= visualization.type.humanize %></td>
                   <td><%= visualization.views_counter_cache %></td>
                   <td>
+                    <%= link_to 'Share', '', onclick: 'share("'+standalone_visualization_url(visualization)+'")', data: { toggle: :modal, target: "#myModal" }, class: 'btn btn-xs btn-primary' %>&nbsp;
                     <%= link_to 'Preview', standalone_visualization_path(visualization), target: '_blank', class: 'btn btn-xs btn-primary' %>&nbsp;
                     <%= link_to 'Edit', edit_visualization_path(visualization), class: 'btn btn-xs' %>&nbsp;
                     <%= link_to 'Delete', visualization, method: :delete, data: { confirm: 'Deleting this visualization. Are you sure?' }, class: 'btn btn-xs btn-primary btn-danger' %>
@@ -37,6 +38,15 @@
 
           <%= paginate @visualizations %>
         </div>
+
+        <%= render partial: "layouts/share_modal" %>
+
+        <script>
+          var share = function(url) {
+            $("#saveForm").attr('action', url);
+            $("#iframe-content").text('<iframe src="'+url+'" frameborder="0" height="100%" width="100%"></iframe>');
+          }
+        </script>
 
       <% else %>
         <p><em>You have not created any visualizations</em></p>
