--- a/app/views/layouts/_share_modal.html.erb
+++ b/app/views/layouts/_share_modal.html.erb
@@ -1,3 +1,9 @@
+<style>
+  .form-group.no-margin{
+    margin: 0;
+  }
+</style>
+
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -10,11 +16,20 @@
         <div class="row">
           <div class="col-md-12">
             <h4>Iframe</h4>
-            <div class="form-group" style="width: 100%">
+            <div class="form-group no-margin" style="width: 100%">
+              <input hidden id="url">
+              <label for="iframe-content" class="control-label">Copy this to your page</label>
               <textarea class="form-control" id="iframe-content"></textarea>
+            </div>
+            <div class="form-group label-static">
+              <label for="bgColor" class="control-label">Background</label>
+              <input type="text" name="bgColor" onchange="updateIframeSrc(this)"  onkeyup="updateIframeSrc(this)" class="form-control" placeholder="Any valid HTML color format (e.g white or #fff)">
+              <p class="help-block">Put none for transparent background.</p>
             </div>
           </div>
         </div>
+
+        <br>
 
         <div class="row">
           <div class="col-sm-12">
@@ -23,10 +38,10 @@
 
           <div class="row">
             <form class="form-inline" id="saveForm" action="" target="_blank">
-              <input hidden name="save" placeholder="Height" value="true">
+              <input hidden name="save" value="true">
           
               <div class="col-sm-4">
-                <div class="form-group">
+                <div class="form-group no-margin">
                   <label class="sr-only" for="widthInput">Width</label>
                   <div class="input-group">
                     <div class="input-group-addon">Width</div>
@@ -37,7 +52,7 @@
               </div>
 
               <div class="col-sm-4">
-                <div class="form-group">
+                <div class="form-group no-margin">
                   <label class="sr-only" for="heightInput">Height</label>
                   <div class="input-group">
                     <div class="input-group-addon">Height</div>
@@ -48,7 +63,7 @@
               </div>
 
               <div class="col-sm-4">
-                <div class="form-group">
+                <div class="form-group no-margin">
                     <button class="btn btn-primary btn-raised btn-block">Generate</button>
                 </div>
               </div>
@@ -75,4 +90,14 @@
     );
     return false;
   })
+
+  var updateIframeSrc = function(el){
+    var color = encodeURIComponent($(el).val());
+    var url = $("#url").val();
+
+    if(color != undefined && color.length > 0)
+      url += "?bg="+color;
+
+    $("#iframe-content").text('<iframe src="'+url+'" frameborder="0" height="100%" width="100%"></iframe>');
+  };
 </script>
