--- a/app/views/visualizations/standalone.html.erb
+++ b/app/views/visualizations/standalone.html.erb
@@ -255,6 +255,7 @@
 
   <script>
     $(document).ready(function() {
+      $("#url").val("<%= standalone_visualization_url(@visualization) %>");
       $("#iframe-content").text('<iframe src="<%= standalone_visualization_url(@visualization) %>" frameborder="0" height="100%" width="100%"></iframe>');
       
       if(getParameterByName('bg'))
